# openapi.yaml
@@ -15,7 +15,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/api.auth.v1.AuthByCodeRequest'
+                            $ref: '#/components/schemas/api.iam.v1.AuthByCodeRequest'
                 required: true
             responses:
                 "200":
@@ -23,7 +23,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.auth.v1.AuthByCodeReply'
+                                $ref: '#/components/schemas/api.iam.v1.AuthByCodeReply'
     /v1/auth/phone:
         post:
             tags:
@@ -33,7 +33,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/api.auth.v1.AuthByPhoneRequest'
+                            $ref: '#/components/schemas/api.iam.v1.AuthByPhoneRequest'
                 required: true
             responses:
                 "200":
@@ -41,7 +41,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.auth.v1.AuthByPhoneReply'
+                                $ref: '#/components/schemas/api.iam.v1.AuthByPhoneReply'
     /v1/users/list:
         post:
             tags:
@@ -51,7 +51,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/api.users.v1.GetUsersRequest'
+                            $ref: '#/components/schemas/api.iam.v1.GetUsersRequest'
                 required: true
             responses:
                 "200":
@@ -59,7 +59,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.users.v1.GetUsersReply'
+                                $ref: '#/components/schemas/api.iam.v1.GetUsersReply'
     /v1/users/me:
         get:
             tags:
@@ -71,7 +71,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.users.v1.UserFullReply'
+                                $ref: '#/components/schemas/api.iam.v1.UserFullReply'
         post:
             tags:
                 - Users
@@ -80,7 +80,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/api.users.v1.UpdateOwnProfileRequest'
+                            $ref: '#/components/schemas/api.iam.v1.UpdateOwnProfileRequest'
                 required: true
             responses:
                 "200":
@@ -88,7 +88,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.users.v1.UserFullReply'
+                                $ref: '#/components/schemas/api.iam.v1.UserFullReply'
         delete:
             tags:
                 - Users
@@ -99,7 +99,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.users.v1.EmptyReply'
+                                $ref: '#/components/schemas/api.iam.v1.EmptyReply'
     /v1/users/me/privacy:
         get:
             tags:
@@ -111,7 +111,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.privacy.v1.PrivacyReply'
+                                $ref: '#/components/schemas/api.iam.v1.PrivacyReply'
         put:
             tags:
                 - Privacy
@@ -120,7 +120,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/api.privacy.v1.PrivacyRequest'
+                            $ref: '#/components/schemas/api.iam.v1.PrivacyRequest'
                 required: true
             responses:
                 "200":
@@ -128,7 +128,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.privacy.v1.PrivacyReply'
+                                $ref: '#/components/schemas/api.iam.v1.PrivacyReply'
     /v1/users/me/settings:
         get:
             tags:
@@ -140,7 +140,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.settings.v1.SettingsReply'
+                                $ref: '#/components/schemas/api.iam.v1.SettingsReply'
         put:
             tags:
                 - Settings
@@ -149,7 +149,7 @@ paths:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/api.settings.v1.SettingsRequest'
+                            $ref: '#/components/schemas/api.iam.v1.SettingsRequest'
                 required: true
             responses:
                 "200":
@@ -157,7 +157,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.settings.v1.SettingsReply'
+                                $ref: '#/components/schemas/api.iam.v1.SettingsReply'
     /v1/users/{userId}:
         get:
             tags:
@@ -168,15 +168,14 @@ paths:
                   in: path
                   required: true
                   schema:
-                    type: integer
-                    format: int64
+                    type: string
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.users.v1.UserReply'
+                                $ref: '#/components/schemas/api.iam.v1.UserReply'
     /v1/users/{userId}/full:
         get:
             tags:
@@ -187,88 +186,84 @@ paths:
                   in: path
                   required: true
                   schema:
-                    type: integer
-                    format: int64
+                    type: string
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/api.users.v1.UserFullReply'
+                                $ref: '#/components/schemas/api.iam.v1.UserFullReply'
 components:
     schemas:
-        api.auth.v1.AuthByCodeReply:
+        api.iam.v1.AuthByCodeReply:
             type: object
             properties:
                 token:
                     type: string
-        api.auth.v1.AuthByCodeRequest:
+        api.iam.v1.AuthByCodeRequest:
             type: object
             properties:
                 userId:
-                    type: integer
-                    format: int64
+                    type: string
                 code:
                     type: string
-        api.auth.v1.AuthByPhoneReply:
+        api.iam.v1.AuthByPhoneReply:
             type: object
             properties:
                 userId:
-                    type: integer
-                    format: int64
-        api.auth.v1.AuthByPhoneRequest:
+                    type: string
+        api.iam.v1.AuthByPhoneRequest:
             type: object
             properties:
                 phone:
                     type: string
-        api.privacy.v1.PrivacyReply:
-            type: object
-            properties:
-                settings:
-                    type: object
-                    additionalProperties:
-                        type: string
-        api.privacy.v1.PrivacyRequest:
-            type: object
-            properties:
-                settings:
-                    type: object
-                    additionalProperties:
-                        type: string
-        api.settings.v1.SettingsReply:
-            type: object
-            properties:
-                settings:
-                    type: object
-                    additionalProperties:
-                        type: string
-        api.settings.v1.SettingsRequest:
-            type: object
-            properties:
-                settings:
-                    type: object
-                    additionalProperties:
-                        type: string
-        api.users.v1.EmptyReply:
+        api.iam.v1.EmptyReply:
             type: object
             properties: {}
-        api.users.v1.GetUsersReply:
+        api.iam.v1.GetUsersReply:
             type: object
             properties:
                 users:
                     type: array
                     items:
-                        $ref: '#/components/schemas/api.users.v1.UserShort'
-        api.users.v1.GetUsersRequest:
+                        $ref: '#/components/schemas/api.iam.v1.UserShort'
+        api.iam.v1.GetUsersRequest:
             type: object
             properties:
                 ids:
                     type: array
                     items:
-                        type: integer
-                        format: int64
-        api.users.v1.UpdateOwnProfileRequest:
+                        type: string
+        api.iam.v1.PrivacyReply:
+            type: object
+            properties:
+                settings:
+                    type: object
+                    additionalProperties:
+                        type: string
+        api.iam.v1.PrivacyRequest:
+            type: object
+            properties:
+                settings:
+                    type: object
+                    additionalProperties:
+                        type: string
+        api.iam.v1.SettingsReply:
+            type: object
+            properties:
+                settings:
+                    type: object
+                    additionalProperties:
+                        type: string
+        api.iam.v1.SettingsRequest:
+            type: object
+            properties:
+                settings:
+                    type: object
+                    additionalProperties:
+                        type: string
+        api.iam.v1.UpdateOwnProfileRequest:
             type: object
             properties:
                 name:
@@ -279,12 +274,11 @@ components:
                     type: string
                 timezone:
                     type: string
-        api.users.v1.User:
+        api.iam.v1.User:
             type: object
             properties:
                 id:
-                    type: integer
-                    format: int64
+                    type: string
                 name:
                     type: string
                 bio:
@@ -307,22 +301,21 @@ components:
                     type: string
                 bioUpdatedAt:
                     type: string
-        api.users.v1.UserFullReply:
+        api.iam.v1.UserFullReply:
             type: object
             properties:
                 user:
-                    $ref: '#/components/schemas/api.users.v1.User'
-        api.users.v1.UserReply:
+                    $ref: '#/components/schemas/api.iam.v1.User'
+        api.iam.v1.UserReply:
             type: object
             properties:
                 user:
-                    $ref: '#/components/schemas/api.users.v1.UserShort'
-        api.users.v1.UserShort:
+                    $ref: '#/components/schemas/api.iam.v1.UserShort'
+        api.iam.v1.UserShort:
             type: object
             properties:
                 id:
-                    type: integer
-                    format: int64
+                    type: string
                 phone:
                     type: string
                 email:
